# OpenSmartFocuser

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: firmware-build.yml
docs/assembly/: README.md
docs/usage/: README.md
docs/wiring/: README.md
drivers/ascom/: README.md
drivers/indi/: .gitignore  CMakeLists.txt  README.md  config.h.cmake  indi_opensmartfocuser_focuser.cpp  indi_opensmartfocuser_focuser.h  indi_opensmartfocuser_focuser.xml.cmake
drivers/indi/cmake_modules/: README.md  UnityBuild.cmake
firmware/: .gitignore  platformio.ini
firmware/backup/: serial_handlers_backup_2026-04-08.txt
firmware/include/: PayloadParser.h  TFT_eSPI_Setup.h  config.h  custom_screens.h  debug_serial.h  lucide28.h  lx200_serial.h  menu.h  menu_strings.h  movement.h  preset.h  serial_command_handler.h  serial_command_index.h  star_map_renderer.h  stars.h  stars_6.5.h  stars_large.h
firmware/include/board_config/: esp32_s3_devkitc1_pins.h
firmware/src/: lx200_serial.cpp  main.cpp  menu.cpp  menu_strings.cpp  movement.cpp  preset.cpp  serial_command_handler.cpp  serial_command_index.cpp  star_map_renderer.cpp
hardware/cad/: pcb mount.dxf
hardware/cad/3mf/: README.md
hardware/cad/step/: README.md
hardware/pcb/OpenSmartFocuser/: #auto_saved_files#  OpenSmartFocuser.kicad_prl  OpenSmartFocuser.kicad_pro  OpenSmartFocuser.kicad_sch  _autosave-OpenSmartFocuser.kicad_pcb  _autosave-OpenSmartFocuser.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
(+3 files in other folders)
